tests/fixtures/errors/bad_doc_syntax.sysml
package Test {
    part def X {
        doc myDoc
    }
}
